# PENETRATOR

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PENETRATOR.spec  README.md  docker-compose.yml  install.bat  install.ps1  penetrator.bat  penetrator.ps1  penetrator.py  penetrator_api.py  penetrator_cli.bat  penetrator_cli.ps1  penetrator_cli.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  pages.yml  release.yml  security.yml
core/: __init__.py  banner.py  cli_bridge.py  i18n.py  menu.py  updater.py  utils.py
docs/: index.html
gui/: __init__.py  app.py  db.py  engine.py  launcher.py  theme.py  tools.py  widgets.py
gui/engine/: __init__.py  _core.py  advanced.py  async_scan.py  auth.py  automation.py  defense.py  discovery.py  forensic.py  integrations.py  network.py  osint.py  passwords.py  recon.py  reporting.py  web.py
locales/: de.json  en.json  es.json  fr.json  zh.json
modules/: __init__.py  api_security.py  cloud_security.py  crypto_tools.py  forensic_tools.py  information_gathering.py  osint_tools.py  password_tools.py  payload_generator.py  reverse_engineering.py  sql_injection.py  steganography.py  web_attacks.py  wordlist_generator.py  xss_tools.py
plugins/: __init__.py  example_motd.py.disabled
tests/: check_locales.py  test_api.py  test_cli.py  test_db.py  test_engine.py  test_engine_coverage.py  test_engine_mocked.py  test_phase9_10.py  test_plugins.py
