[project]
name = "penetrator"
version = "1.2.0"
description = "Modern Windows-native penetration testing toolkit (EN/FR/ZH) — 42+ tools, dark GUI + CLI."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Tarraw", email = "Tarraw974@gmail.com" }]
keywords = ["pentest", "security", "cybersecurity", "ctf", "windows"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Security",
    "Intended Audience :: Information Technology",
]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["build", "dist", "assets"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = [
    "E501",   # line-too-long (covered case-by-case)
    "E402",   # module-level import (some launchers reconfigure stdout first)
    "SIM117", # combined with-blocks not always nicer
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra -q"
