[project]
name = "penetrator"
version = "1.2.0"
description = "Modern Windows-native penetration testing toolkit (EN/FR/ZH) — 42+ tools, dark GUI + CLI."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Tarraw", email = "Tarraw974@gmail.com" }]
keywords = ["pentest", "security", "cybersecurity", "ctf", "windows"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Security",
    "Intended Audience :: Information Technology",
]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["build", "dist", "assets"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = [
    "E501",   # line-too-long
    "E402",   # module-level import (launchers reconfigure stdout first)
    "E702",   # multiple statements on one line (common in compact engine code)
    "F401",   # imported but unused (CLI modules use them indirectly)
    "I001",   # import block formatting
    "SIM105", # contextlib.suppress nags (try/except/pass is fine for GUI)
    "SIM117", # combined with-blocks
    "UP037",  # remove quotes from forward annotations (intentional)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "B011"]
"plugins/*" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra -q"

[tool.coverage.run]
source = ["core", "gui"]
omit = [
    "gui/app.py",        # Tk widgets, hard to unit-test
    "gui/tools.py",      # Same
    "gui/widgets.py",    # Same
    "*/tests/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_empty = true

[tool.bandit]
exclude_dirs = ["tests", "build", "dist", ".github"]
skips = [
    "B101",  # assert_used (we use asserts in tests)
    "B311",  # random not for crypto (we use secrets where it matters)
    "B404",  # subprocess import (legitimate for tool wrappers)
    "B603",  # subprocess without shell=True is the *safe* form
    "B607",  # partial path — we rely on PATH lookup intentionally
]
